# hackathon-2-phase-1-todo-console-app

./: .gitignore  QWEN.md  README.md  pyproject.toml  todo.py
.specify/memory/: constitution.md
history/prompts/advanced-todo-features/: 1-advanced-todo-features.spec.prompt.md  2-advanced-todo-features.plan.prompt.md  3-advanced-todo-features.tasks.prompt.md  4-advanced-todo-features.implementation.green.prompt.md
history/prompts/constitution/: 1-project-constitution-update.constitution.prompt.md  1-todo-console-app-constitution-update.constitution.prompt.md
history/prompts/todo-console-app/: 1-todo-console-app-spec.spec.prompt.md  2-todo-console-app-plan.plan.prompt.md  3-todo-console-app-tasks.tasks.prompt.md
history/prompts/todo-intermediate-features/: 2-todo-console-intermediate-features-spec.spec.prompt.md  3-todo-console-intermediate-features-plan.plan.prompt.md  4-todo-console-intermediate-features-tasks.tasks.prompt.md  (+1 more)
specs/001-advanced-todo-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-console-app/checklists/: requirements.md
src/: main.py  test_app.py  todo.py
src/cli/: main.py  menu.py
src/lib/: date_utils.py  storage.py  utils.py
src/models/: task.py
src/services/: task_manager.py  todo_service.py
tests/: test_advanced_features.py
tests/unit/: test_task.py  test_task_manager.py
(+5 files in other folders)
