[project]
name = "todo-console-app"
version = "0.1.0"
description = "A simple in-memory todo console application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[tool.setuptools.packages.find]
where = ["src"]